# rm_detector2026

./: CMakeLists.txt  README.md  package.xml
.devcontainer/: Dockerfile  devcontainer.json
config/: detector_params.yaml  pipeline_config.yaml
include/cv_detector/factories/: decoder_factory.hpp  engine_factory.hpp  postprocessor_factory.hpp  preprocessor_factory.hpp
include/cv_detector/node/: detector_node.hpp
include/cv_detector/pipeline/: i_decoder.hpp  i_inference_engine.hpp  i_postprocessor.hpp  i_preprocessor.hpp  pipeline.hpp  types.hpp
launch/: detector_launch.py
models/yolov10-pose/: best.xml  yolov10_openvino.xml
scripts/: test_image_feed.py
src/factories/: decoder_factory.cpp  engine_factory.cpp  postprocessor_factory.cpp  preprocessor_factory.cpp
src/node/: detector_node.cpp  main.cpp
src/pipeline/: pipeline.cpp
src/pipeline/decoders/: yolo_decoder.cpp  yolo_decoder.hpp
src/pipeline/engines/: openvino_engine.cpp  openvino_engine.hpp
src/pipeline/postprocessors/: empty_postprocessor.hpp  nms_postprocessor.cpp  nms_postprocessor.hpp  sequential_postprocessor.hpp
src/pipeline/preprocessors/: letterbox_preprocessor.cpp  letterbox_preprocessor.hpp  yolo_preprocessor.cpp  yolo_preprocessor.hpp
test/: test_engines.cpp  test_postprocessors.cpp  test_preprocessors.cpp
tmp/test_results/: 8-9-gd-no4-part2.avi-86_info.json  全向1_20250207040228_00108236_info.json
